--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Welcome to Akinator</title>
+    <link rel="stylesheet" href="/_css/common.css">
+    <script type="module" src="/_js/main.js"></script>
 </head>
 
 <body>
@@ -16,6 +18,7 @@
         <h3>This is H3</h3>
         <p>para... para... para... para... para... para... para... para... </p>
         <p>para... para... para... para... para... para... para... para... </p>
+        <div id="app"></div>
         <footer>This is footer</footer>
     </div>
 </body>
