--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Welcome to Akinator</title>
     <link rel="stylesheet" href="/_css/common.css">
-    <script type="module" src="/_js/main.js"></script>
+    <script type="module" src="/_src/main.js"></script>
 </head>
 
 <body>
